--- a/BlazorFFT/Pages/Index.razor
+++ b/BlazorFFT/Pages/Index.razor
@@ -11,14 +11,14 @@
       The folowing links will request audio from your microphone:
    </div>
    <div class="rowLink">
-      <a href="/Canvas2dFFT">Canvas Audio FFT</a>
+      <a href="/Canvas2dFFT">Canvas 2D Audio FFT</a>
    </div>
    <div class="rowLink">
       <a href="/WebGLFFT">WebGL Audio FFT</a>
    </div>
    <div class="rowSep" />
    <div class="rowFoot">
-	   <a href="https://github.com/sonicmouse?tab=repositories">GitHub</a> | 
+	   <a href="https://github.com/sonicmouse/BlazorAudioFFT">GitHub</a> | 
        <a href="https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor">Bl@zor</a> | 
        <a href="https://stackoverflow.com/users/1204153/andy">Stack Overflow</a>
    </div>
