--- a/BlazorFFT/Components/WebGLAudioComponent.razor
+++ b/BlazorFFT/Components/WebGLAudioComponent.razor
@@ -1,2 +1,3 @@
 ﻿@inherits WebGLAudioComponentBase
+<button onclick="startAudio2Listen()" type="button">Test</button>
 <BECanvas Width="100" Height="100" @ref="_canvasReference" ></BECanvas>
