--- a/BlazorFFT/Components/Canvas2dAudioComponent.razor
+++ b/BlazorFFT/Components/Canvas2dAudioComponent.razor
@@ -1,3 +1,3 @@
 ﻿@inherits Canvas2dAudioComponentBase
-<button onclick="startAudio2Listen()" type="button">Test</button>
+<button @onclick="OnStartListeningToAudio" type="button">Test</button>
 <BECanvas Width="100" Height="100" @ref="_canvasReference" ></BECanvas>
