--- a/BlazorFFT/Pages/Index.razor
+++ b/BlazorFFT/Pages/Index.razor
@@ -1,14 +1,16 @@
 ﻿@page "/"
 
 <div class="divMain">
-   <div>
+   <div class="rowImage">
       <img class="imgBlazor" src="images/BrandBlazor_nohalo_1000x.png" alt="Blazor">
    </div>
    <div class="rowTitle">
       Made With Blazor WASM
    </div>
    <div class="rowInfo">
-      The folowing links will request audio from your microphone:
+      The following applications will request audio from your microphone and process
+      it in real-time using FFT signal processing. Everything is done in Blazor using
+      the C# language.
    </div>
    <div class="rowLink">
       <a href="/Canvas2dFFT">Canvas 2D Audio FFT</a>
