--- a/BlazorFFT/Components/WebGLAudioComponent.razor
+++ b/BlazorFFT/Components/WebGLAudioComponent.razor
@@ -1,3 +1,7 @@
 ﻿@inherits WebGLAudioComponentBase
-<button @onclick="OnStartListeningToAudio" type="button">Test</button>
-<BECanvas Width="100" Height="100" @ref="_canvasReference" ></BECanvas>
+
+<div class="@_centerButtonDivClass">
+	<button @onclick="OnStartListeningToAudio" type="button">Start WebGL Audio FFT</button>
+</div>
+
+<BECanvas Width="0" Height="0" @ref="_canvasReference" ></BECanvas>
