--- a/BlazorFFT/wwwroot/css/app.css
+++ b/BlazorFFT/wwwroot/css/app.css
@@ -8,11 +8,11 @@
 }
 
 a:link {
-    color: purple;
+    color: rebeccapurple;
 }
 
 a:visited {
-    color: purple;
+    color: rebeccapurple;
 }
 
 a:hover {
@@ -20,7 +20,7 @@ a:hover {
 }
 
 a:active {
-    color: purple;
+    color: rebeccapurple;
 }
 
 .divMain {
@@ -62,6 +62,7 @@ a:active {
 .rowLink {
     text-align: center;
     margin: 4px;
+    font-weight:bold;
 }
 
 .rowSep {
