--- a/BlazorFFT/Components/Canvas2dAudioComponent.razor
+++ b/BlazorFFT/Components/Canvas2dAudioComponent.razor
@@ -1,7 +1,7 @@
 ﻿@inherits Canvas2dAudioComponentBase
 
 <div class="@_centerButtonDivClass">
-	<button @onclick="OnStartListeningToAudio" type="button">Start 2D Audio FFT</button>
+	<button class="centerButton" @onclick="OnStartListeningToAudio" type="button">Start 2D Audio FFT</button>
 </div>
 
 <BECanvas Width="10" Height="10" @ref="_canvasReference" ></BECanvas>
