--- a/BlazorFFT/Components/WebGLAudioComponent.razor
+++ b/BlazorFFT/Components/WebGLAudioComponent.razor
@@ -1,7 +1,7 @@
 ﻿@inherits WebGLAudioComponentBase
 
 <div class="@_centerButtonDivClass">
-	<button @onclick="OnStartListeningToAudio" type="button">Start WebGL Audio FFT</button>
+	<button class="centerButton" @onclick="OnStartListeningToAudio" type="button">Start WebGL Audio FFT</button>
 </div>
 
 <BECanvas Width="10" Height="10" @ref="_canvasReference" ></BECanvas>
