--- a/BlazorFFT/wwwroot/css/app.css
+++ b/BlazorFFT/wwwroot/css/app.css
@@ -1,10 +1,10 @@
 ﻿html, body {
-    height:100%;
-    margin:0;
+    height: 100%;
+    margin: 0;
     overflow: hidden;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:16px;
-    background-color:white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    background-color: white;
 }
 
 a:link {
@@ -85,6 +85,24 @@ a:active {
 
 .centerButtonDivHide {
     display:none;
+}
+
+.centerButton {
+    background-color: rebeccapurple;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 4px;
+    border: 2px solid hotpink;
+    font-weight: bold;
+    transition-duration: 0.4s;
+}
+
+.centerButton:hover {
+    background-color: purple;
 }
 
 #blazor-error-ui {
