favicon and shadowing on button

--- a/BlazorFFT/wwwroot/css/app.css
+++ b/BlazorFFT/wwwroot/css/app.css
@@ -99,6 +99,7 @@ a:active {
     border: 2px solid hotpink;
     font-weight: bold;
     transition-duration: 0.4s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .centerButton:hover {
