--- a/BlazorFFT/Pages/Index.razor
+++ b/BlazorFFT/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <div class="divMain">
    <div class="rowImage">
-      <img class="imgBlazor" src="images/BrandBlazor_nohalo_1000x.png" alt="Blazor">
+      <img class="imgBlazor" src="images/blazor.png" alt="Blazor">
    </div>
    <div class="rowTitle">
       Made With Blazor WASM
