cleanup in GL better launch page

--- a/BlazorFFT/Components/Canvas2dAudioComponent.razor
+++ b/BlazorFFT/Components/Canvas2dAudioComponent.razor
@@ -1,5 +1,6 @@
 ﻿@inherits Canvas2dAudioComponentBase
 
+<div class="@_centerButtonDivBgClass"></div>
 <div class="@_centerButtonDivClass">
 	<button class="centerButton" @onclick="OnStartListeningToAudio" type="button">Start 2D Audio FFT</button>
 </div>
