--- a/BlazorFFT/Components/WebGLAudioComponent.razor
+++ b/BlazorFFT/Components/WebGLAudioComponent.razor
@@ -1,5 +1,6 @@
 ﻿@inherits WebGLAudioComponentBase
 
+<div class="@_centerButtonDivBgClass"></div>
 <div class="@_centerButtonDivClass">
 	<button class="centerButton" @onclick="OnStartListeningToAudio" type="button">Start WebGL Audio FFT</button>
 </div>
