update main page. adjusted gain on webgl view

--- a/BlazorFFT/Pages/Index.razor
+++ b/BlazorFFT/Pages/Index.razor
@@ -9,8 +9,8 @@
    </div>
    <div class="rowInfo">
       The following applications will request audio from your microphone and process
-      it in real-time using FFT signal processing. Everything is done in Blazor using
-      the C# language.
+      it in real-time using FFT signal processing. Range is [0, 4000] Hz. Everything
+      is done in Blazor using the C# language.
    </div>
    <div class="rowLink">
       <a href="/Canvas2dFFT">Canvas 2D Audio FFT</a>
