note finder initial commit

--- a/BlazorFFT/Pages/Index.razor
+++ b/BlazorFFT/Pages/Index.razor
@@ -18,6 +18,9 @@
    <div class="rowLink">
       <a href="/WebGLFFT">WebGL Audio FFT</a>
    </div>
+    <div class="rowLink">
+      <a href="/NoteFinderFFT">Note Finder FFT</a>
+   </div>
    <div class="rowSep" />
    <div class="rowFoot">
 	   <a href="https://github.com/sonicmouse/BlazorAudioFFT">GitHub</a> | 
