--- a/BlazorFFT/Pages/Index.razor
+++ b/BlazorFFT/Pages/Index.razor
@@ -5,7 +5,7 @@
       <img class="imgBlazor" src="images/blazor.png" alt="Blazor">
    </div>
    <div class="rowTitle">
-      Made With Blazor WASM
+      Made With Blazor Web Assembly
    </div>
    <div class="rowInfo">
       The following applications will request audio from your microphone and process
@@ -27,4 +27,12 @@
        <a href="https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor">Bl@zor</a> | 
        <a href="https://stackoverflow.com/users/1204153/andy">Stack Overflow</a>
    </div>
+   <div class="rowVersion">
+      @Version
+   </div>
 </div>
+
+@code{
+    private string Version =>
+        $"v{Assembly.GetExecutingAssembly().GetCustomAttribute<AssemblyInformationalVersionAttribute>().InformationalVersion}";
+}
